build-docker-image/cluster-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cluster-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: web-app.info
    http:
      paths:
      - path: /
        backend:
          serviceName: web-app
          servicePort: 8080
